<resources>
    <string name="app_name">Ethanol OrGasoline</string>
    <string name="textTitle">Melhor opção de abastecimento do seu carro</string>
    <string name="descriptionLogo">Logotipo Álcool ou Gasolina</string>
    <string name="hintPriceGas">Preço da gasolina. ex.6.89</string>
    <string name="hintPriceEthanol">Preço do álcool. ex.4.39</string>
    <string name="textBaseResult">Melhor utilizar?</string>
    <string name="textResultGas">Melhor utilizar Gasolina</string>
    <string name="textResultEthanol">Melhor utilizar Álcool</string>
    <string name="btnCalculate">Calcular</string>
    <string name="textInformation">Deve informar todos os valores!</string>
    <string name="msgInvalidText">Valores inválidos!</string>
</resources>